增加功能：远程节点，允许配置一个主节点，连接到其它节点，用于多设备部署的环境，将它们聚合到一起。没有经过严格测试。